--- a/Notes-Backend/package.json
+++ b/Notes-Backend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10"
   }
 }
