Update environment configuration for MongoDB connection; adjust server port handling and log entries

--- a/Notes-Backend/.env
+++ b/Notes-Backend/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/notesapp
+MONGO_URI=mongodb+srv://ubarnwal0802:kK63fbO8tj8W3Z40@cluster0.dptuw.mongodb.net/
+PORT=4000
 JWT_SECRET=your_jwt_secret_key
 ACCESS_TOKEN_SECRET=your_access_token_secret_key
 REFRESH_TOKEN_SECRET=your_refresh_token_secret_key
