--- a/Notes-Backend/package.json
+++ b/Notes-Backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
